Fix footer layout shift

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -104,13 +104,14 @@
         >footer {
             grid-row: footer;
             border-top: .15rem solid;
-            display: flex;
-            justify-content: space-evenly;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            place-content: center;
             text-align: center;
             margin-top: 2rlh;
 
             @media (max-width: 100ch) {
-                flex-direction: column;
+                grid-template-columns: 1fr;
             }
         }
     }
